--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -24,7 +24,6 @@
   <link rel="stylesheet" href="/Client/css/planeamiento.css">
   <link rel="stylesheet" href="/Client/css/GBatalla.css">
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
-  <link rel="stylesheet" href="/Client/css/miradial.css">
   
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -77,9 +76,6 @@
   <script src="/Client/js/miradial.js"></script>
 
 <script src="/Client/js/networkConfig.js"></script>
-<!-- Sistema de identidad centralizado -->
-<script src="/Client/js/UserIdentity.js"></script>
-<script src="/Client/js/UserIdentityLoader.js"></script>
 <!-- Scripts modularizados para gestión de batalla -->
 <script src="/Client/js/utilsGB.js"></script>
 <script src="/Client/js/MAIRAChat.js"></script>
@@ -960,7 +956,7 @@
       </div>
       
       <!-- Botón flotante para mostrar panel lateral (cuando está oculto) -->
-      <button id="toggle-panel-btn" class="panel-toggle-btn" onclick="console.log('🔘 Botón flotante clickeado!'); if(window.MAIRA && window.MAIRA.GestionBatalla && window.MAIRA.GestionBatalla.togglePanel) { window.MAIRA.GestionBatalla.togglePanel(); } else { console.error('❌ togglePanel no disponible en botón flotante:', { MAIRA: !!window.MAIRA, GestionBatalla: !!window.MAIRA?.GestionBatalla, togglePanel: typeof window.MAIRA?.GestionBatalla?.togglePanel }); }">
+      <button id="toggle-panel-btn" class="panel-toggle-btn" onclick="window.MAIRA.GestionBatalla.togglePanel()">
         <i class="fas fa-chevron-left"></i>
         <span class="tooltip">Abrir Panel</span>
       </button>
@@ -969,7 +965,7 @@
       <div id="panel-lateral" class="panel-lateral oculto">
         <div class="panel-header">
           <h3>Gestión de Batalla</h3>
-          <button id="cerrar-panel" class="btn-cerrar-panel" onclick="console.log('🔘 Botón toggle clickeado!'); if(window.MAIRA && window.MAIRA.GestionBatalla && window.MAIRA.GestionBatalla.togglePanel) { window.MAIRA.GestionBatalla.togglePanel(); } else { console.error('❌ togglePanel no disponible:', { MAIRA: !!window.MAIRA, GestionBatalla: !!window.MAIRA?.GestionBatalla, togglePanel: typeof window.MAIRA?.GestionBatalla?.togglePanel }); }">
+          <button id="cerrar-panel" class="btn-cerrar-panel" onclick="window.MAIRA.GestionBatalla.togglePanel()">
             <i class="fas fa-chevron-right"></i>
           </button>
         </div>
