--- a/static/planeamiento.html
+++ b/static/planeamiento.html
@@ -24,12 +24,10 @@
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
   
   <script src="/Client/js/networkConfig.js"></script>
-  <script src="/Client/js/UserIdentity.js"></script>
-  <script src="/Client/js/UserIdentityLoader.js"></script>
   <!-- Script de corrección de dependencias -->
-  <!-- <script src="/correccion_dependencias.js"></script> COMENTADO: Archivo inexistente -->
+  <script src="/correccion_dependencias.js"></script>
   <!-- Test específico de correcciones -->
-  <!-- <script src="/test_correcciones_especificas.js"></script> COMENTADO: Archivo inexistente -->
+  <script src="/test_correcciones_especificas.js"></script>
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -46,8 +44,8 @@
   <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
   <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
   <script src="/node_modules/proj4/dist/proj4.js"></script>
-  <!-- <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script> COMENTADO: Dependencia faltante -->
-  <script src="https://unpkg.com/mgrs@1.0.0/mgrs.js"></script>
+  <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script>
+  <script src="/node_modules/mgrs/mgrs.js"></script>
   <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
   <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
   <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
