🎮 Limpieza modos de juego: eliminados LAN e INTERNET
- Simplificados modos a solo LOCAL y ONLINE
- LOCAL: juego en mismo equipo con descarga de recursos
- ONLINE: juego multijugador con comunicación servidor
- Actualizadas constantes, lógica y interfaz HTML
- Código más limpio y mantenible

Archivos modificados:
- gestorTurnos.js: constante MODOS_JUEGO
- gestorComunicacion.js: condición de inicialización
- iniciarpartida.js: valor por defecto
- iniciarpartida.html: opciones del selector

--- a/static/iniciarpartida.html
+++ b/static/iniciarpartida.html
@@ -37,8 +37,7 @@
                         <select id="modoJuego" class="form-control">
                             <option value="">Seleccione un modo</option>
                             <option value="local">Modo Local</option>
-                            <option value="lan">Modo LAN</option>
-                            <option value="internet">Modo Internet</option>
+                            <option value="online">Modo Online</option>
                         </select>
                     </div>
                 </div>
