📄 Actualización index.html
- Mejoras en la página principal del proyecto MAIRA
- Interfaz de usuario optimizada

--- a/static/index.html
+++ b/static/index.html
@@ -278,7 +278,7 @@
                                     <h4>Interacción Natural</h4>
                                     <ul>
                                         <li>Reconocimiento de gestos con las manos</li>
-                                        <li>Reemplazo del puntero láser tradicional</li>
+                                        <li>Reemplazo del puntero láser </li>
                                     </ul>
                                 </div>
                                 <div class="development-item">
@@ -308,11 +308,6 @@
                             <p><i class="fas fa-envelope"></i> info@maira.mil.ar</p>
                             <p><i class="fas fa-phone"></i> +54 11 4555-6789</p>
                             <p><i class="fas fa-map-marker-alt"></i> Av. Luis María Campos 480, CABA, Argentina</p>
-                        </div>
-                        <div class="contact-cta">
-                            <h3>¿Interesado en implementar MAIRA en su unidad?</h3>
-                            <p>Contáctenos para coordinar una demostración y conocer los requisitos de implementación.</p>
-                            <a href="#" class="btn" id="btnContactCTA">Solicitar información</a>
                         </div>
                     </div>
                 </section>
