--- a/static/CO.html
+++ b/static/CO.html
@@ -9,7 +9,7 @@
     <!-- CSS Libraries -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/Client/css/CO.css">
@@ -17,7 +17,7 @@
     <!-- Core JavaScript Libraries (ORDEN CRÍTICO) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="/node_modules/leaflet/dist/leaflet.js"></script>
     
     <!-- Export Libraries -->
     <script src="/node_modules/jspdf/dist/jspdf.umd.min.js"></script>
