--- a/static/gestionbatalla.html
+++ b/static/gestionbatalla.html
@@ -8,17 +8,21 @@
   <link rel="manifest" href="/Client/image/favicon_logoai/site.webmanifest">
   <script src="/node_modules/socket.io/client-dist/socket.io.min.js"></script>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <!-- Estilos CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <link rel="stylesheet" href="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-measure/dist/leaflet-measure.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet-easybutton/src/easy-button.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-draw/dist/leaflet.draw.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="stylesheet" href="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-measure/dist/leaflet-measure.css" />
+  <link rel="stylesheet" href="/node_modules/leaflet-easybutton/src/easy-button.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="/Client/css/planeamiento.css">
@@ -31,31 +35,32 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="/node_modules/leaflet/dist/leaflet.js"></script>
   <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <script src="https://unpkg.com/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
+  <script src="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
-  <script src="https://unpkg.com/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
-  <script src="https://unpkg.com/leaflet-geosearch/dist/bundle.min.js"></script>
-  <script src="https://unpkg.com/geotiff/dist-browser/geotiff.js"></script>
-  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
-  <script src="https://unpkg.com/proj4@2.8.1/dist/proj4.js"></script>
-  <script src="https://unpkg.com/leaflet-utfgrid/L.UTFGrid.js"></script>
-  <script src="https://unpkg.com/mgrs@1.0.0/mgrs.js"></script>
-  <script src="https://unpkg.com/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
-  <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-  <script src="https://unpkg.com/leaflet-measure/dist/leaflet-measure.js"></script>
-  <script src="https://unpkg.com/leaflet-easybutton/src/easy-button.js"></script>
-  <script src="https://unpkg.com/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
-  <script src="https://unpkg.com/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
-  <script src="https://unpkg.com/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
-  <script src="https://unpkg.com/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
-  <script src="https://unpkg.com/leaflet-search/dist/leaflet-search.src.js"></script>
-  <script src="https://unpkg.com/file-saver/dist/FileSaver.js"></script>
+  <script src="/node_modules/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
+  <script src="/node_modules/leaflet-geosearch/dist/bundle.min.js"></script>
+  <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
+  <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
+  <script src="/node_modules/proj4/dist/proj4.js"></script>
+  <script src="/node_modules/leaflet-utfgrid/dist/leaflet.utfgrid.js"></script>
+  <script src="/node_modules/mgrs/mgrs.js"></script>
+  <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
+  <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+  <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
+  <script src="/node_modules/leaflet-easybutton/src/easy-button.js"></script>
+  <script src="/node_modules/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
+  <script src="/node_modules/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
+  <script src="/node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
+  <script src="/node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
+  <script src="/node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
+  <script src="/node_modules/file-saver/dist/FileSaver.js"></script>
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
   <!-- Scripts personalizados -->
+  <script src="/Client/js/mobile-optimizer.js"></script>
   <script src="/Client/js/elevation.worker.js"></script>
   <script src="/Client/js/elevationHandler.js"></script>
   <script src="/Client/js/vegetacionhandler.js"></script>
