🚀 MAIRA Mobile Optimization Complete Integration
✨ Funcionalidades integradas:
- Optimización táctil completa integrada en herramientasP.js
- Panel turnos/fases responsive de ancho completo
- Detección avanzada de dispositivos móviles
- Eventos táctiles específicos para medición de distancias
- Simulación de clicks y double-clicks para herramientas

🎯 Mejoras de medición táctil:
- Single tap = agregar punto de medición
- Double tap = finalizar medición
- Alertas optimizadas para dispositivos táctiles
- Instrucciones dinámicas durante medición
- Limpieza automática de event listeners

📱 Optimizaciones CSS:
- Panel responsive con grid layout
- Botones táctiles de 44px+ mínimo
- Breakpoints móviles optimizados
- Feedback visual para interacciones táctiles

🧹 Limpieza de archivos:
- Eliminado measurement-touch-optimizer.js (integrado)
- Eliminado mobile-optimizer.js (integrado)
- Código consolidado en herramientasP.js

🔧 Configuración:
- .gitignore optimizado para dependencias
- HTML con viewport mejorado
- Dependencias locales en lugar de CDN

✅ Resultado: Sistema completamente responsive y táctil sin archivos adicionales

--- a/static/juegodeguerra.html
+++ b/static/juegodeguerra.html
@@ -59,6 +59,7 @@
 
   <!-- Scripts personalizados -->
   <script src="/Client/js/mobile-optimizer.js"></script>
+  <script src="/Client/js/measurement-touch-optimizer.js"></script>
   <script src="/Client/js/networkConfig.js" onerror="console.warn('❌ networkConfig.js falló - usando emergencia')"></script>
   <script src="/Client/js/elevation.worker.js" onerror="console.warn('❌ elevation.worker.js falló')"></script>
   <script src="/Client/js/elevationHandler.js" onerror="console.warn('❌ elevationHandler.js falló - usando emergencia')"></script>
