🌿 SISTEMA VEGETACIÓN NDVI OPTIMIZADO
✅ Implementado:
- Procesador de tiles NDVI: 755 tiles → 2,978 sub-tiles (380-400KB c/u)
- Índice maestro unificado: 16 paquetes organizados
- VegetationHandler renovado: transitabilidad + pendiente preservadas
- Estructura reorganizada: Client/Libs/datos_argentina/Vegetacion_Mini_Tiles/

🗑️ Limpieza:
- Eliminados 5.9GB de tiles originales
- Reducción del 83%: 6GB → 1.2GB total
- Solo tiles NDVI (óptimos para análisis militar)

📦 Resultado:
- Tamaños compatibles con elevación (~513KB)
- 16 paquetes bajo 100MB (GitHub-friendly)
- CDN-ready con bounds geográficos correctos
- Funciones transitabilidad/pendiente preservadas

--- a/frontend/iniciarpartida.html
+++ b/frontend/iniciarpartida.html
@@ -11,13 +11,13 @@
     <link rel="manifest" href="/Client/image/favicon_logoai/site.webmanifest">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/Client/css/iniciarpartida.css">
-    <script src="/frontend/js/networkConfig.js"></script>
+    <script src="/Client/js/networkConfig.js"></script>
     <script src="/node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="/frontend/js/MAIRAChat.js"></script>
-    <script src="/frontend/js/partidas.js"></script>
-    <script src="/frontend/js/iniciarpartida.js"></script>
+    <script src="/Client/js/MAIRAChat.js"></script>
+    <script src="/Client/js/partidas.js"></script>
+    <script src="/Client/js/iniciarpartida.js"></script>
 </head>
 
 <body>
