--- a/frontend/planeamiento.html
+++ b/frontend/planeamiento.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="/Client/css/planeamiento.css">
   <link rel="stylesheet" href="/Client/css/CYGMarcha.css">
   
-  <script src="/frontend/js/networkConfig.js"></script>
+  <script src="/Client/js/networkConfig.js"></script>
   <!-- Script de corrección de dependencias -->
   <script src="/correccion_dependencias.js"></script>
   <!-- Test específico de correcciones -->
@@ -59,26 +59,26 @@
   <script src="/Client/Libs/Leaflet.pattern-master/dist/leaflet.pattern.js"></script>
 
   <!-- Scripts personalizados -->
-  <script src="/frontend/js/elevation.worker.js"></script>
-  <script src="/frontend/js/elevationHandler.js"></script>
-  <script src="/frontend/js/vegetacionhandler.js"></script>
-  <script src="/frontend/js/mapaP.js"></script>
-  <script src="/frontend/js/calcosP.js"></script>
-  <script src="/frontend/js/edicioncompleto.js"></script>
-  <script src="/frontend/js/simbolosP.js"></script>
-  <script src="/frontend/js/herramientasP.js"></script>
-  <script src="/frontend/js/dibujosMCCP.js"></script>
-  <script src="/frontend/js/atajosP.js"></script>
+  <script src="/Client/js/elevation.worker.js"></script>
+  <script src="/Client/js/elevationHandler.js"></script>
+  <script src="/Client/js/vegetacionhandler.js"></script>
+  <script src="/Client/js/mapaP.js"></script>
+  <script src="/Client/js/calcosP.js"></script>
+  <script src="/Client/js/edicioncompleto.js"></script>
+  <script src="/Client/js/simbolosP.js"></script>
+  <script src="/Client/js/herramientasP.js"></script>
+  <script src="/Client/js/dibujosMCCP.js"></script>
+  <script src="/Client/js/atajosP.js"></script>
   
-  <script src="/frontend/js/CalculoMarcha.js"></script>
-  <script src="/frontend/js/graficoMarcha.js"></script>
-  <script src="/frontend/js/panelMarcha.js"></script>
-  <script src="/frontend/js/indexP.js"></script>
+  <script src="/Client/js/CalculoMarcha.js"></script>
+  <script src="/Client/js/graficoMarcha.js"></script>
+  <script src="/Client/js/panelMarcha.js"></script>
+  <script src="/Client/js/indexP.js"></script>
   
   <!-- Script de verificación -->
-  <script src="/frontend/js/Test/testPlaneamiento.js"></script>
-  <script src="/frontend/js/Test/autoTest.js"></script>
-  <script src="/frontend/js/Test/visualizadorTests.js"></script>
+  <script src="/Client/js/Test/testPlaneamiento.js"></script>
+  <script src="/Client/js/Test/autoTest.js"></script>
+  <script src="/Client/js/Test/visualizadorTests.js"></script>
   
   <!-- Scripts de tiles optimizados movidos a tools/static-debug -->
 
