--- a/frontend/CO.html
+++ b/frontend/CO.html
@@ -54,10 +54,10 @@
     </script>
     
     <!-- ✅ SCRIPTS CO EN ORDEN CORRECTO -->
-    <script src="/frontend/js/miradial.js"></script>          <!-- ✅ PRIMERO - Base para menús -->
-    <script src="/frontend/js/paneledicionCO.js"></script>    <!-- ✅ SEGUNDO - Panel edición -->
-    <script src="/frontend/js/conexionesCO.js"></script>      <!-- ✅ TERCERO - Conexiones -->
-    <script src="/frontend/js/CO.js"></script>                <!-- ✅ ÚLTIMO - Lógica principal -->
+    <script src="/Client/js/miradial.js"></script>          <!-- ✅ PRIMERO - Base para menús -->
+    <script src="/Client/js/paneledicionCO.js"></script>    <!-- ✅ SEGUNDO - Panel edición -->
+    <script src="/Client/js/conexionesCO.js"></script>      <!-- ✅ TERCERO - Conexiones -->
+    <script src="/Client/js/CO.js"></script>                <!-- ✅ ÚLTIMO - Lógica principal -->
     
     <!-- ✅ Inicialización diferida -->
     <script>
