🔧 Actualizar rutas JS en HTML - Corregir referencias a archivos movidos
✅ HTML actualizados con rutas organizadas:
  - CO.html → js/common/, js/ui/, js/modules/organizacion/
  - index.html → js/common/, js/ui/, js/utils/
  - iniciarpartida.html → js/common/, js/modules/partidas/
  - inicioGB.html → js/common/, js/modules/gestion/

🐛 FIX: Corrección de rutas que quedaron desactualizadas en commit anterior

--- a/MAIRA-4.0/Client/index.html
+++ b/MAIRA-4.0/Client/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/carrusel.css">
     <script src="https://kit.fontawesome.com/707f71e5d4.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/networkConfig.js"></script>
-    <script src="js/config.js"></script>
+    <script src="js/common/networkConfig.js"></script>
+    <script src="js/utils/config.js"></script>
 </head>
 <body>
     <div class="container">
@@ -403,9 +403,9 @@
     <div id="backToTop">
         <i class="fas fa-chevron-up"></i>
     </div>
-    <script src="js/landing3d.js"></script>
-    <script src="js/carrusel.js"></script>
-    <script src="js/validacion.js"></script>
+    <script src="js/ui/landing3d.js"></script>
+    <script src="js/ui/carrusel.js"></script>
+    <script src="js/utils/validacion.js"></script>
 
 </body>
 </html>
