--- a/MAIRA-4.0/Client/CO.html
+++ b/MAIRA-4.0/Client/CO.html
@@ -54,10 +54,10 @@
     </script>
     
     <!-- ✅ SCRIPTS CO EN ORDEN CORRECTO -->
-    <script src="js/miradial.js"></script>          <!-- ✅ PRIMERO - Base para menús -->
-    <script src="js/paneledicionCO.js"></script>    <!-- ✅ SEGUNDO - Panel edición -->
-    <script src="js/conexionesCO.js"></script>      <!-- ✅ TERCERO - Conexiones -->
-    <script src="js/CO.js"></script>                <!-- ✅ ÚLTIMO - Lógica principal -->
+    <script src="js/common/miradial.js"></script>          <!-- ✅ PRIMERO - Base para menús -->
+    <script src="js/ui/paneledicionCO.js"></script>    <!-- ✅ SEGUNDO - Panel edición -->
+    <script src="js/modules/organizacion/conexionesCO.js"></script>      <!-- ✅ TERCERO - Conexiones -->
+    <script src="js/modules/organizacion/CO.js"></script>                <!-- ✅ ÚLTIMO - Lógica principal -->
     
     <!-- ✅ Inicialización diferida -->
     <script>
