--- a/MAIRA-4.0/Client/iniciarpartida.html
+++ b/MAIRA-4.0/Client/iniciarpartida.html
@@ -11,13 +11,13 @@
     <link rel="manifest" href="image/favicon_logoai/site.webmanifest">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/iniciarpartida.css">
-    <script src="js/networkConfig.js"></script>
+    <script src="js/common/networkConfig.js"></script>
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/MAIRAChat.js"></script>
     <script src="js/partidas.js"></script>
-    <script src="js/iniciarpartida.js"></script>
+    <script src="js/modules/partidas/iniciarpartida.js"></script>
 </head>
 
 <body>
