--- a/MAIRA-4.0/Client/inicioGB.html
+++ b/MAIRA-4.0/Client/inicioGB.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/inicioGB.css">
-    <script src="js/networkConfig.js"></script>
+    <script src="js/common/networkConfig.js"></script>
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="../node_modules/milsymbol/dist/milsymbol.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="js/MAIRAChat.js"></script>
-    <script src="js/inicioGBhandler.js"></script>
+    <script src="js/modules/gestion/inicioGBhandler.js"></script>
 </head>
 
 <body>
