--- a/MAIRA-4.0/Client/iniciarpartida.html
+++ b/MAIRA-4.0/Client/iniciarpartida.html
@@ -15,8 +15,8 @@
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/MAIRAChat.js"></script>
-    <script src="js/partidas.js"></script>
+    <script src="js/common/MAIRAChat.js"></script>
+    <script src="js/common/partidas.js"></script>
     <script src="js/modules/partidas/iniciarpartida.js"></script>
 </head>
 
