--- a/MAIRA-4.0/Client/inicioGB.html
+++ b/MAIRA-4.0/Client/inicioGB.html
@@ -16,7 +16,7 @@
     <script src="../node_modules/milsymbol/dist/milsymbol.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/MAIRAChat.js"></script>
+    <script src="js/common/MAIRAChat.js"></script>
     <script src="js/modules/gestion/inicioGBhandler.js"></script>
 </head>
 
