--- a/MAIRA-4.0/Client/planeamiento.html
+++ b/MAIRA-4.0/Client/planeamiento.html
@@ -11,15 +11,15 @@
   
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-draw/dist/leaflet.draw.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-  <link rel="stylesheet" href="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-measure/dist/leaflet-measure.css" />
-  <link rel="stylesheet" href="/node_modules/leaflet-easybutton/src/easy-button.css" />
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../node_modules/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-draw/dist/leaflet.draw.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+  <link rel="stylesheet" href="../node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-fullscreen/dist/leaflet.fullscreen.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-sidebar-v2/css/leaflet-sidebar.min.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-measure/dist/leaflet-measure.css" />
+  <link rel="stylesheet" href="../node_modules/leaflet-easybutton/src/easy-button.css" />
   
   <link rel="stylesheet" href="css/common/planeamiento.css">
   <link rel="stylesheet" href="css/common/CYGMarcha.css">
@@ -31,19 +31,19 @@
   <!-- Scripts JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/node_modules/jspdf/dist/jspdf.umd.min.js"></script>
-  <script src="/node_modules/html2canvas/dist/html2canvas.min.js"></script>
+  <script src="../node_modules/jspdf/dist/jspdf.umd.min.js"></script>
+  <script src="../node_modules/html2canvas/dist/html2canvas.min.js"></script>
   
-  <script src="/node_modules/leaflet/dist/leaflet.js"></script>
-  <script src="/node_modules/milsymbol/dist/milsymbol.js"></script>
-  <script src="/node_modules/d3/dist/d3.min.js"></script>
-  <script src="/node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
-  <script src="/node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
-  <script src="/node_modules/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
-  <script src="/node_modules/leaflet-geosearch/dist/bundle.min.js"></script>
-  <script src="/node_modules/geotiff/dist-browser/geotiff.js"></script>
-  <script src="/node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
-  <script src="/node_modules/proj4/dist/proj4.js"></script>
+  <script src="../node_modules/leaflet/dist/leaflet.js"></script>
+  <script src="../node_modules/milsymbol/dist/milsymbol.js"></script>
+  <script src="../node_modules/d3/dist/d3.min.js"></script>
+  <script src="../node_modules/@raruto/leaflet-elevation/dist/leaflet-elevation.min.js"></script>
+  <script src="../node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
+  <script src="../node_modules/leaflet-geometryutil/src/leaflet.geometryutil.js"></script>
+  <script src="../node_modules/leaflet-geosearch/dist/bundle.min.js"></script>
+  <script src="../node_modules/geotiff/dist-browser/geotiff.js"></script>
+  <script src="../node_modules/leaflet-control-geocoder/dist/Control.Geocoder.min.js"></script>
+  <script src="../node_modules/proj4/dist/proj4.js"></script>
   <!-- <script src="../node_modules/leaflet-utfgrid/L.UTFGrid-min.js"></script> -->
   
   <!-- Three.js para visualización 3D - Sistema de carga robusto -->
@@ -130,26 +130,26 @@
   <!-- Three.js OrbitControls cargado dinámicamente arriba -->
   
   <!-- Socket.IO desde node_modules local -->
-  <script src="/node_modules/socket.io/client-dist/socket.io.min.js"></script>
+  <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
   
   <!-- Three.js cargado desde /Libs/three-js/ - Sin dependencias externas -->
   <!-- Pako.js para descompresión de TIF en tar.gz -->
-  <script src="/node_modules/pako/dist/pako.min.js"></script>
+  <script src="../node_modules/pako/dist/pako.min.js"></script>
   
   <script type="module">
     import * as mgrs from '/node_modules/mgrs/mgrs.js';
     window.mgrs = mgrs;
   </script>
-  <script src="/node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
-  <script src="/node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
-  <script src="/node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
-  <script src="/node_modules/leaflet-easybutton/src/easy-button.js"></script>
-  <script src="/node_modules/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
-  <script src="/node_modules/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
-  <script src="/node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
-  <script src="/node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
-  <script src="/node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
-  <script src="/node_modules/file-saver/dist/FileSaver.js"></script>
+  <script src="../node_modules/leaflet.gridlayer.googlemutant/dist/Leaflet.GoogleMutant.js"></script>
+  <script src="../node_modules/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+  <script src="../node_modules/leaflet-measure/dist/leaflet-measure.js"></script>
+  <script src="../node_modules/leaflet-easybutton/src/easy-button.js"></script>
+  <script src="../node_modules/leaflet-fullscreen/dist/Leaflet.fullscreen.min.js"></script>
+  <script src="../node_modules/leaflet-bing-layer/leaflet-bing-layer.min.js"></script>
+  <script src="../node_modules/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js"></script>
+  <script src="../node_modules/leaflet-sidebar-v2/js/leaflet-sidebar.min.js"></script>
+  <script src="../node_modules/leaflet-search/dist/leaflet-search.src.js"></script>
+  <script src="../node_modules/file-saver/dist/FileSaver.js"></script>
   <script src="Libs/leaflet-pattern/dist/leaflet.pattern.js"></script>
 
   <!-- Scripts personalizados -->
