--- a/MAIRA-4.0/Client/iniciarpartida.html
+++ b/MAIRA-4.0/Client/iniciarpartida.html
@@ -9,12 +9,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon_logoai/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon_logoai/favicon-32x32.png">
     <link rel="manifest" href="image/favicon_logoai/site.webmanifest">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/iniciarpartida.css">
     <script src="js/common/networkConfig.js"></script>
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/common/MAIRAChat.js"></script>
     <script src="js/common/partidas.js"></script>
     <script src="js/modules/partidas/iniciarpartida.js"></script>
