--- a/MAIRA-4.0/Client/inicioGB.html
+++ b/MAIRA-4.0/Client/inicioGB.html
@@ -8,14 +8,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/favicon_logoai/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon_logoai/favicon-32x32.png">
     <link rel="manifest" href="image/favicon_logoai/site.webmanifest">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="css/inicioGB.css">
     <script src="js/common/networkConfig.js"></script>
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="../node_modules/milsymbol/dist/milsymbol.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/common/MAIRAChat.js"></script>
     <script src="js/modules/gestion/inicioGBhandler.js"></script>
 </head>
