🔐 FIX CRÍTICO: Agregar UserIdentity + sessionManager en 4 HTML
- iniciarpartida.html: ✅ Agregados UserIdentity.js + sessionManager.js
- inicioGB.html: ✅ Agregados UserIdentity.js + sessionManager.js
- juegodeguerra.html: ✅ Agregado sessionManager.js (UserIdentity ya existía)
- gestionbatalla.html: ✅ Agregados UserIdentity.js + sessionManager.js

PROBLEMA RESUELTO: Sin estos archivos, 'crear partida' y chat fallaban
porque no tenían acceso a datos de sesión del usuario logueado

--- a/MAIRA-4.0/Client/planeamiento.html
+++ b/MAIRA-4.0/Client/planeamiento.html
@@ -872,10 +872,10 @@
                 <option value="D">Sección</option>
                 <option value="E">Compañía/Escuadrón/Batería</option>
                 <option value="F">Regimiento/Batallón/Grupo</option>
-                <option value="G">Brigada</option>
-                <option value="H">División</option>
-                <option value="I">Cuerpo/MEF</option>
-                <option value="J">Ejército</option>
+                <option value="H">Brigada</option>
+                    <option value="I">División</option>
+                    <option value="J">Cuerpo/MEF</option>
+                    <option value="K">Ejército</option>
             </select>
         </div>
     </div>
