--- a/MAIRA-4.0/Client/juegodeguerra.html
+++ b/MAIRA-4.0/Client/juegodeguerra.html
@@ -1034,18 +1034,18 @@
           <div>
               <label for="magnitud">Magnitud:</label>
               <select id="magnitud">
-                  <option value="-">No especificado</option>
-                  <option value="A">Equipo/Tripulación</option>
-                  <option value="B">peloton</option>
-                  <option value="C">grupo</option>
-                  <option value="D">Sección</option>
-                  <option value="E">Compañía/Escuadrón/Batería</option>
-                  <option value="F">Regimiento/Batallón/Grupo</option>
-                  <option value="G">Brigada</option>
-                  <option value="H">División</option>
-                  <option value="I">Cuerpo/MEF</option>
-                  <option value="J">Ejército</option>
-              </select>
+                    <option value="-">No especificado</option>
+                    <option value="A">Equipo/Tripulación</option>
+                    <option value="B">Pelotón</option>
+                    <option value="C">Grupo</option>
+                    <option value="D">Sección</option>
+                    <option value="E">Compañía/Escuadrón/Batería</option>
+                    <option value="F">Regimiento/Batallón/Grupo</option>
+                    <option value="H">Brigada</option>
+                    <option value="I">División</option>
+                    <option value="J">Cuerpo/MEF</option>
+                    <option value="K">Ejército</option>
+                </select>
           </div>
       </div>
 
