🔐 FIX CRÍTICO APLICADO: UserIdentity + sessionManager en 4 HTML
✅ iniciarpartida.html - Agregados UserIdentity.js + sessionManager.js
✅ inicioGB.html - Agregados UserIdentity.js + sessionManager.js
✅ juegodeguerra.html - Agregado sessionManager.js (UserIdentity ya existía)
✅ gestionbatalla.html - Agregados UserIdentity.js + sessionManager.js

SOLUCIÓN: Sin estos archivos, 'crear partida' y chat fallaban porque
no tenían acceso a datos de sesión del usuario logueado. Ahora las
4 páginas pueden acceder a UserIdentity y SessionManager correctamente.

--- a/MAIRA-4.0/Client/iniciarpartida.html
+++ b/MAIRA-4.0/Client/iniciarpartida.html
@@ -15,7 +15,10 @@
     <script src="../node_modules/socket.io/client-dist/socket.io.min.js"></script>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/common/MAIRAChat.js"></script>
+    <!-- 🔐 SESSION MANAGEMENT - CRÍTICO -->
+    <script src="js/core/UserIdentity.js"></script>
+    <script src="js/utils/sessionManager.js"></script>
+    <!-- 💬 CHAT Y PARTIDAS -->    <script src="js/common/MAIRAChat.js"></script>
     <script src="js/common/partidas.js"></script>
     <script src="js/modules/partidas/iniciarpartida.js"></script>
 </head>
