--- a/MAIRA-4.0/Client/inicioGB.html
+++ b/MAIRA-4.0/Client/inicioGB.html
@@ -16,7 +16,10 @@
     <script src="../node_modules/milsymbol/dist/milsymbol.js"></script>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/common/MAIRAChat.js"></script>
+    <!-- 🔐 SESSION MANAGEMENT - CRÍTICO -->
+    <script src="js/core/UserIdentity.js"></script>
+    <script src="js/utils/sessionManager.js"></script>
+    <!-- 💬 CHAT Y GESTIÓN -->    <script src="js/common/MAIRAChat.js"></script>
     <script src="js/modules/gestion/inicioGBhandler.js"></script>
 </head>
 
