--- a/MAIRA-4.0/Client/juegodeguerra.html
+++ b/MAIRA-4.0/Client/juegodeguerra.html
@@ -119,7 +119,7 @@
        
   <!-- 🏗️ CORE (archivos que existen) -->
   <script src="js/core/UserIdentity.js"></script>
-  <script src="js/core/MAIRACore.js"></script>
+  <script src="js/utils/sessionManager.js"></script>  <script src="js/core/MAIRACore.js"></script>
   
   <!-- 🎮 PANEL INFERIOR UNIFICADO - Total War Style -->
   <script src="js/core/panelInferiorUnificado.js"></script>
