--- a/MAIRA-4.0/Client/gestionbatalla.html
+++ b/MAIRA-4.0/Client/gestionbatalla.html
@@ -31,6 +31,9 @@
   <script src="../node_modules/jspdf/dist/jspdf.umd.min.js"></script>
   <script src="../node_modules/html2canvas/dist/html2canvas.min.js"></script>
   
+  <!-- 🔐 SESSION MANAGEMENT - CRÍTICO -->
+  <script src="js/core/UserIdentity.js"></script>
+  <script src="js/utils/sessionManager.js"></script>  
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://unpkg.com/milsymbol@2.1.1/dist/milsymbol.js"></script>
   <script src="https://d3js.org/d3.v7.min.js"></script>
