🐛 Debug: Agregar logs extensivos al evento medicionFinalizada

--- a/MAIRA-4.0/Client/planeamiento.html
+++ b/MAIRA-4.0/Client/planeamiento.html
@@ -185,7 +185,7 @@
   <script src="js/utils/geometryUtils.js"></script>
   <script src="js/handlers/mobileOptimizationHandler.js"></script>
   <script src="js/handlers/mapInteractionHandler.js"></script>
-  <script src="js/handlers/measurementHandler.js"></script>
+  <script src="js/handlers/measurementHandler.js?v=1762284255"></script>
   
 
   <!-- Element Editor - FUNCIÓN CRÍTICA PARA EDICIÓN - MOVIDO A edicioncompleto.js -->
