✨ CRÍTICO: Disparar evento medicionFinalizada desde herramientasP.js para PT

--- a/MAIRA-4.0/Client/planeamiento.html
+++ b/MAIRA-4.0/Client/planeamiento.html
@@ -201,7 +201,7 @@
   <script src="js/common/mapaP.js"></script>
   <script src="js/utils/calcosP.js"></script>
   <script src="js/common/simbolosP.js"></script>
-  <script src="js/common/herramientasP.js"></script>
+  <script src="js/common/herramientasP.js?v=1762284358"></script>
   <script src="js/common/fontAwesomeTest.js"></script>
   <script src="js/common/toolsInitializer.js"></script>
   <script src="js/common/dibujosMCCP.js"></script>
