🎮 PROYECTO JUEGO GUERRA V2 - Planificación completa y fixes críticos
✅ DOCUMENTACIÓN NUEVA:
- PROYECTO_JUEGO_GUERRA_V2.md: Documento completo del proyecto (352 líneas)
  * Arquitectura modular basada en planeamiento.html
  * Sistema dual: estratégico (MilSymbol) + táctico (3D models)
  * Canvas HexGrid sin interferencias (pointer-events: none)
  * Estado centralizado con observers
  * Plan de 8 fases de implementación
  * Integración con iniciarpartida.html
  * Inspirado en Total War Rome III y Steel Beasts

- FIXES_APLICADOS_20251104.md: Historial de correcciones
- INSTRUCCIONES_FIX_MANUAL.md: Guía de fixes manuales

🔧 FIXES CRÍTICOS APLICADOS:
- gestorInterfaz.js: Desactivado actualizarEstadoJuego() y actualizarPanelJuego()
  * Eliminaba creación de paneles obsoletos que competían con Panel Unificado

- gestorFases.js:
  * Agregado wait loop para window.map (evita timing races)
  * Comentado disable/enable de HexGrid (no era necesario)

- hexgrid.js:
  * Comentado sistema enable/disable
  * Agregado validación classList para evitar crashes

- inicializadorJuegoGuerra.js:
  * Fix crítico: jugadores de number a array [{id, equipo}]
  * Esto causaba falla completa en gestorJuego.inicializar()

- indexP.js: Cache-busting actualizado
- juegodeguerra.html: Referencias actualizadas

⚠️ ESTADO ACTUAL:
Sistema funcional con Panel Inferior Unificado.
Próximo paso: Implementar FASE 1 del proyecto V2 (Fundaciones)

🎯 OBJETIVO:
Reconstruir juego de guerra desde cero con arquitectura sólida,
aprovechando toda la base de planeamiento.html y planeamiento_integrado.html

--- a/MAIRA-4.0/Client/juegodeguerra.html
+++ b/MAIRA-4.0/Client/juegodeguerra.html
@@ -206,10 +206,10 @@
   <!-- 📡 GESTOR COMUNICACIÓN CRÍTICO -->
   <script src="js/modules/juego/gestorComunicacion.js"></script>
   <!-- 🔄 GESTORES DE FASES Y ACCIONES -->
-  <script src="js/modules/juego/gestorFases.js"></script>
+  <script src="js/modules/juego/gestorFases.js?v=1762305913"></script>
   <script src="js/modules/juego/gestorAcciones.js"></script>
   <script src="js/modules/juego/gestorEventos.js"></script>
-  <script src="js/modules/juego/hexgrid.js"></script>
+  <script src="js/modules/juego/hexgrid.js?v=1762305215"></script>
   <script src="js/modules/juego/gestorJuego.js"></script>
   <script src="js/modules/juego/gestorUnidades.js"></script>
   <script src="js/modules/juego/gestorMapa.js"></script>
@@ -253,7 +253,7 @@
   <script src="js/common/mairaRadialMenu.js"></script>
   
   <!-- 📊 ÍNDICE Y PRUEBAS -->
-  <script src="js/common/indexP.js"></script>
+  <script src="js/common/indexP.js?v=1762297555"></script>
   <script src="js/Test/testPlaneamiento.js"></script>
   <script src="js/Test/autoTest.js"></script>
   <script src="js/Test/visualizadorTests.js"></script>
