🔧 FIX: Actualizar versión TerrainGenerator en planeamiento_integrado
CAMBIO:
- planeamiento_integrado.html: v=20241106-batchv2 → v=20241106-batchv3-meshfix

SOLUCIONA:
- Script cacheado con versión antigua (objetos wrapper)
- Fuerza navegador a recargar versión con meshes directos

--- a/MAIRA-4.0/Client/planeamiento_integrado.html
+++ b/MAIRA-4.0/Client/planeamiento_integrado.html
@@ -394,7 +394,7 @@
 
   <!-- 🏗️ TERRENO 3D - FASE 1: Generación desde map -->
   <script src="https://unpkg.com/leaflet-image@0.4.0/leaflet-image.js"></script>
-  <script src="js/services/TerrainGenerator3D.js?v=20241106-batchv2"></script>
+  <script src="js/services/TerrainGenerator3D.js?v=20241106-batchv3-meshfix"></script>
 
 
   
