Agregar botones dinamicos + Eliminar panel viejo
Botones dinamicos segun fase:
- PREPARACION: Delimitar/Confirmar Sector y Zonas
- DESPLIEGUE: Listo para Combate
- COMBATE: Pasar Turno (solo en planificacion)

Eliminar panel viejo:
- Comentar panelInferiorUnificado.js en HTML
- Panel integrado ahora se crea en InicializadorJuegoV2

Sistema de confirmaciones secuenciales OK

--- a/MAIRA-4.0/Client/juegodeguerraV2.html
+++ b/MAIRA-4.0/Client/juegodeguerraV2.html
@@ -438,7 +438,8 @@
   <!-- Scripts personalizados -->
   <!-- Core y utilidades -->
   <script src="js/core/UserIdentity.js"></script>
-  <script src="js/core/panelInferiorUnificado.js"></script>
+  <!-- ✅ Panel integrado ahora se crea en InicializadorJuegoV2 -->
+  <!-- <script src="js/core/panelInferiorUnificado.js"></script> -->
   <script src="js/utils/sessionManager.js"></script>
   
   
