--- a/MAIRA-4.0/tools/test_capas_gis.html
+++ b/MAIRA-4.0/tools/test_capas_gis.html
@@ -260,12 +260,11 @@
                 fillOpacity: 0.3
             },
             localidades: {
-                radius: 5,
-                fillColor: '#ff6600',
-                color: '#fff',
-                weight: 1,
-                opacity: 1,
-                fillOpacity: 0.7
+                color: '#ff6600',
+                weight: 2,
+                opacity: 0.9,
+                fillColor: '#ffaa66',
+                fillOpacity: 0.4
             }
         };
 
@@ -295,7 +294,7 @@
             mostrarMensaje('Cargando capas GIS...', 'loading');
 
             try {
-                const response = await fetch('https://localhost:8443/api/capas_gis/consultar', {
+                const response = await fetch('http://localhost:5001/api/capas_gis/consultar', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -402,9 +401,7 @@
 
                 if (capasData.areas_urbanas.localidades) {
                     L.geoJSON(capasData.areas_urbanas.localidades, {
-                        pointToLayer: (feature, latlng) => {
-                            return L.circleMarker(latlng, estilos.localidades);
-                        },
+                        style: estilos.localidades,
                         onEachFeature: agregarPopup
                     }).addTo(grupoUrbanas);
                 }
