feat: Integración completa sistema vehículo-terreno en análisis
🎯 Integración vehiculosTerreno.js en analisisTerreno.js:
- Import de módulo vehiculosTerreno.js con funciones evaluación
- Propiedades vehiculoSeleccionado y condicionesMeteo agregadas
- puedeVadearRio() integrado en sección hidrografía
- evaluarImpactoSuelo() integrado en sección suelos

🎮 UI mejorada:
- Selector tipo vehículo militar (7 opciones: camión, blindados, anfibios, tanques, infantería)
- Event listener muestra capacidades del vehículo en consola
- Selector clima conectado con condicionesMeteo

⚠️ Alertas dinámicas:
- Ríos: Evalúa capacidad vadeo según veh ículo y ancho/profundidad
  * ⛔ No vadeable: factorModificado = 0.0
  * 🌊 Vadeable: Reducción proporcional al ancho
  * 🌊🚙 Anfibio: Puede cruzar nadando
- Suelos: Modificadores específicos por tipo tracción
  * ⚙️ Oruga: Menos afectado por arenal/barrial
  * 🚙 Rueda: Más afectado por terrenos blandos
  * 🚶 Infantería: Modificadores propios
  * ⚠️ Advertencias automáticas (ej: barrial + lluvia = -90%)

🗺️ Mapeo vehículos por tipo elemento:
- vehiculosPorTipoElemento.js: Mapeo completo CCOO
- Infantería mecanizada → M113, VCTP, Striker
- Tanques → TAM, SK105
- Exploración → Jeep 230G, Polaris, Moto, Caballo
- Logística → Camiones, SK105 logístico
- Artillería → Palmaria, cohetes, montaña con mulas
- Ingenieros → Camiones, M113, botes
- Comunicaciones → Camiones, Hilux, Ford F350

🔧 Fix import ES6:
- planeamiento_integrado.html modificado
- vehiculosTerreno.js y analisisTerreno.js cargados como type='module'
- Resuelto error 'Cannot use import statement outside a module'

📊 Sistema completo funcional:
- 25 capas GIS + 7 tipos vehículos + condiciones meteo
- Cálculos realistas vehículo-terreno
- Alertas específicas por obstáculo
- Base para selector contextual en edición elementos

--- a/MAIRA-4.0/Client/planeamiento_integrado.html
+++ b/MAIRA-4.0/Client/planeamiento_integrado.html
@@ -505,7 +505,8 @@
   <!-- Módulos específicos -->
   <script src="js/modules/planeamiento/planeamiento.js"></script>
   <!-- 🗺️ Módulo Análisis de Terreno -->
-  <script src="js/modules/analisisTerreno.js"></script>
+  <script type="module" src="js/modules/vehiculosTerreno.js"></script>
+  <script type="module" src="js/modules/analisisTerreno.js"></script>
   <script src="js/common/indexP.js"></script>
   
   <!-- Script de verificación -->
